gitops/base/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: saas-customer-portal
  labels:
    app: saas-customer-portal
  annotations:
    haproxy.router.openshift.io/timeout: 60s
    haproxy.router.openshift.io/balance: roundrobin
spec:
  to:
    kind: Service
    name: saas-customer-portal
    weight: 100
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  wildcardPolicy: None
